# saudi-market-feasibility-ai

./: .gitignore  API_DOCUMENTATION.md  HOW_TO_ADD_PDF.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 001_initial_schema.sql
backend/src/: config.rs  db.rs  main.rs  middleware.rs  models.rs  utils.rs
backend/src/models/: db_models.rs
backend/src/routes/: chat.rs  competitors.rs  mod.rs  personas.rs  rag_study.rs
backend/src/services/: claude_service.rs  document_service.rs  gemini_service.rs  mod.rs  openai_service.rs  places_service.rs  qdrant_service.rs  tavily_service.rs
backend/tests/: test_api.py
documents/: README.md  demo_test.txt
documents/01-government/balady/: municipal_license.txt
documents/01-government/gosi/: social_insurance.txt
documents/01-government/ministry_of_commerce/: commercial_registration.txt
documents/01-government/monshaat/: sme_funding_programs.txt
documents/01-government/qiwa/: labor_contracts.txt
documents/01-government/zatca/: tax_zakat_guide.txt
documents/02-feasibility-templates/: food_beverage_template.txt
frontend/: .env.local.example  Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/components/: multi-step-form.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
scripts/: test-api.ps1  test-api.sh
shared-types/: feasibility.ts  index.ts  package.json
