[package]
name = "saudi-market-backend"
version = "0.1.0"
edition = "2024"
authors = ["Abdullah Balila <a2005balila@gmail.com>"]
description = "Saudi Market AI - Feasibility Study Platform Backend"

[dependencies]
# Web Framework
axum = { version = "*", features = ["macros"] }
tokio = { version = "*", features = ["full"] }
tower = { version = "*", features = ["full"] }
tower-http = { version = "*", features = ["cors", "trace", "compression-br"] }

# Serialization
serde = { version = "*", features = ["derive"] }
serde_json = "*"
pdf-extract = "*"

# Environment & Config
dotenvy = "*"
config = "*"

# Error Handling
thiserror = "*"
anyhow = "*"

# Logging
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter", "json"] }

# Validation
validator = { version = "*", features = ["derive"] }

# HTTP Client (for external APIs)
reqwest = { version = "*", features = ["json", "rustls-tls"] }
urlencoding = "*"

# Async Traits
async-trait = "*"

# UUID
cuid2 = "*"
uuid = { version = "*", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "*", features = ["serde"] }

[dev-dependencies]
tokio-test = "*"
axum-test = "*"
mockall = "*"

[[bin]]
name = "saudi-market-backend"
path = "src/main.rs"
